--- a/index.html
+++ b/index.html
@@ -9,15 +9,25 @@
         padding: 15px; 
         margin: 15px; 
     }
+
     html { 
       margin: 0;
       padding: 0;
     }
+
     body { 
       max-width: 600px;
       margin: 30px auto;
       font-family: sans-serif;
       color: #333;
+    }
+
+    #b p{
+      color: green;
+    }
+    
+    section#b ul li:nth-child(2){
+      background-color: red;
     }
   </style>
 </head>
