--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
       color: green;
     }
     
-    section#b ul li:nth-child(2){
+    /* section#b ul li:nth-child(2){
       background-color: red;
-    }
+    } */
   </style>
 </head>
 <body>
@@ -51,6 +51,6 @@
       </section>
   </div>
 
-<script src="selection.js"></script>
+<script src="manipulation.js"></script>
 </body>
 </html>
