--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
       color: #333;
     }
 
-    #b p{
+    /* #b p{
       color: green;
-    }
+    } */
     
     /* section#b ul li:nth-child(2){
       background-color: red;
@@ -51,6 +51,6 @@
       </section>
   </div>
 
-<script src="manipulation.js"></script>
+<script src="manipulationode.js"></script>
 </body>
 </html>
