DOM Manipulation II

--- a/index.html
+++ b/index.html
@@ -51,6 +51,6 @@
       </section>
   </div>
 
-<script src="manipulationode.js"></script>
+<script src="manipulationnode.js"></script>
 </body>
 </html>
