nambahkan beberapa file

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
   <h1 id="judul">Hello World</h1>
   <div id="container">
       <section id="a">
-          <p class="p1">paragraf 1</p>
+          <p class="p1" onclick="getVal(this)" value ="p1">paragraf 1</p>
           <a href="http://instagram.com/sandhikagalih">Instagram Sandhika Galih</a>
-          <p class="p2">paragraf 2</p>
-          <p class="p3">paragraf 3</p>
+          <p class="p2" value ="p2">paragraf 2</p>
+          <p class="p3" value ="p3">paragraf 3</p>
       </section>
       <section id="b">
           <p>paragraf 4</p>
@@ -51,6 +51,6 @@
       </section>
   </div>
 
-<script src="manipulationnode.js"></script>
+<script src="events.js"></script>
 </body>
 </html>
