prevent default n event bubbling

--- a/traversal/index.html
+++ b/traversal/index.html
@@ -37,6 +37,10 @@
             position: relative;
         }
 
+        .card a{
+            text-decoration: none;
+        }
+
         .card .nama, .card .telp {
             display: block;
             line-height: 20px;
@@ -72,36 +76,32 @@
     </style>
 </head>
 <body>
-
-<div class="container">
-
-    <div class="card">
-      <img src="2.jpg" width="96" height="96">
-      <span class="nama">Arisandi Yudiarta</span>
-      <span class="telp">08123456789</span>
-      <span class="close">×</span>
+    <div class="container">
+        <div class="card">
+            <img src="2.jpg" width="96" height="96">
+            <span class="nama">Arisandi Yudiarta</span>
+            <span class="telp">08123456789</span>
+            <span class="close">×</span>
+        </div>
+        <div class="card">
+            <img src="1.jpg" width="96" height="96">
+            <span class="nama">Sunawan Gelo</span>
+            <span class="telp">08123456789</span>
+            <span class="close">×</span>
+        </div> 
+        <div class="card">
+            <img src="3.jpg" width="96" height="96">
+            <span class="nama">Sangki Kurniawan</span>
+            <span class="telp">08123456789</span>
+            <span class="close">×</span>
+        </div> 
+        <div class="card">
+            <img src="4.png" width="96" height="96">
+            <span class="nama">Lifen Kin</span>
+            <span class="telp">08123456789</span>
+            <span class="close">×</span>
+        </div>  
     </div>
-    <div class="card">
-        <img src="1.jpg" width="96" height="96">
-        <span class="nama">Sunawan Gelo</span>
-        <span class="telp">08123456789</span>
-        <span class="close">×</span>
-      </div> 
-      <div class="card">
-        <img src="3.jpg" width="96" height="96">
-        <span class="nama">Sangki Kurniawan</span>
-        <span class="telp">08123456789</span>
-        <span class="close">×</span>
-      </div> 
-      <div class="card">
-        <img src="4.png" width="96" height="96">
-        <span class="nama">Lifen Kin</span>
-        <span class="telp">08123456789</span>
-        <span class="close">×</span>
-      </div>  
-
-</div>
-
-<script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
